# cosmic-app-volume

./: .gitignore  Cargo.toml  README.md  justfile
i18n/en/: cosmic_ext_applet_app_volume.ftl
res/: io.github.ctsdownloads.CosmicExtAppletAppVolume.desktop
src/: lib.rs  main.rs  mpris_subscription.rs  pulse.rs
